parser/seal.output
Terminals unused in grammar

   ERROR
   INT
   STRING
   BOOL
   FLOAT


语法

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl_list decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl: VAR variable ';'

    7 variableDecl_list: variableDecl
    8                  | variableDecl_list variableDecl

    9 variable_list: %empty
   10              | variable
   11              | variable_list ',' variable

   12 variable: OBJECTID TYPEID

   13 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock

   14 stmt_list: stmt
   15          | stmt_list stmt

   16 stmtBlock: '{' variableDecl_list stmt_list '}'
   17          | '{' variableDecl_list '}'
   18          | '{' stmt_list '}'
   19          | '{' '}'

   20 stmt: ';'
   21     | expr ';'
   22     | ifStmt
   23     | whileStmt
   24     | forStmt
   25     | breakStmt
   26     | continueStmt
   27     | returnStmt
   28     | stmtBlock

   29 ifStmt: IF expr stmtBlock ELSE stmtBlock
   30       | IF expr stmtBlock

   31 whileStmt: WHILE expr stmtBlock

   32 forStmt: FOR expr ';' expr ';' expr stmtBlock
   33        | FOR expr ';' expr ';' stmtBlock
   34        | FOR expr ';' ';' expr stmtBlock
   35        | FOR ';' expr ';' expr stmtBlock
   36        | FOR ';' ';' expr stmtBlock
   37        | FOR expr ';' ';' stmtBlock
   38        | FOR ';' expr ';' stmtBlock
   39        | FOR ';' ';' stmtBlock

   40 returnStmt: RETURN expr ';'
   41           | RETURN ';'

   42 continueStmt: CONTINUE ';'

   43 breakStmt: BREAK ';'

   44 expr: OBJECTID '=' expr
   45     | CONST_BOOL
   46     | CONST_FLOAT
   47     | CONST_INT
   48     | CONST_STRING
   49     | call
   50     | '(' expr ')'
   51     | OBJECTID
   52     | expr '+' expr
   53     | expr '-' expr
   54     | expr '*' expr
   55     | expr '/' expr
   56     | expr '%' expr
   57     | '-' expr
   58     | expr '<' expr
   59     | expr LE expr
   60     | expr EQUAL expr
   61     | expr NE expr
   62     | expr GE expr
   63     | expr '>' expr
   64     | expr AND expr
   65     | expr OR expr
   66     | expr '^' expr
   67     | '!' expr
   68     | '~' expr
   69     | expr '&' expr
   70     | expr '|' expr

   71 call: OBJECTID '(' actual_list ')'

   72 actual_list: %empty
   73            | actual
   74            | actual_list ',' actual

   75 actual: expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 67
'%' (37) 56
'&' (38) 69
'(' (40) 13 50 71
')' (41) 13 50 71
'*' (42) 54
'+' (43) 52
',' (44) 11 74
'-' (45) 53 57
'/' (47) 55
';' (59) 6 20 21 32 33 34 35 36 37 38 39 40 41 42 43
'<' (60) 58
'=' (61) 44
'>' (62) 63
'^' (94) 66
'{' (123) 16 17 18 19
'|' (124) 70
'}' (125) 16 17 18 19
'~' (126) 68
error (256)
IF (258) 29 30
ELSE (260) 29
WHILE (261) 31
FOR (262) 32 33 34 35 36 37 38 39
BREAK (263) 43
CONTINUE (264) 42
FUNC (265) 13
RETURN (266) 40 41
CONST_BOOL (267) 45
CONST_INT (268) 47
CONST_STRING (269) 48
CONST_FLOAT (270) 46
VAR (271) 6
ERROR (273)
AND (274) 64
OR (275) 65
EQUAL (276) 60
NE (277) 61
GE (278) 62
LE (279) 59
INT (280)
STRING (281)
BOOL (282)
FLOAT (283)
OBJECTID (284) 12 13 44 51 71
TYPEID (285) 12 13
UMINUS (287)


Nonterminals, with rules where they appear

$accept (49)
    左： 0
program (50)
    左： 1, 右： 0
decl_list (51)
    左： 2 3, 右： 1 3
decl (52)
    左： 4 5, 右： 2 3
variableDecl (53)
    左： 6, 右： 4 7 8
variableDecl_list (54)
    左： 7 8, 右： 8 16 17
variable_list (55)
    左： 9 10 11, 右： 11 13
variable (56)
    左： 12, 右： 6 10 11
callDecl (57)
    左： 13, 右： 5
stmt_list (58)
    左： 14 15, 右： 15 16 18
stmtBlock (59)
    左： 16 17 18 19, 右： 13 28 29 30 31 32 33 34 35 36 37 38
    39
stmt (60)
    左： 20 21 22 23 24 25 26 27 28, 右： 14 15
ifStmt (61)
    左： 29 30, 右： 22
whileStmt (62)
    左： 31, 右： 23
forStmt (63)
    左： 32 33 34 35 36 37 38 39, 右： 24
returnStmt (64)
    左： 40 41, 右： 27
continueStmt (65)
    左： 42, 右： 26
breakStmt (66)
    左： 43, 右： 25
expr (67)
    左： 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69 70, 右： 21 29 30 31 32 33 34 35 36 37 38
    40 44 50 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 75
call (68)
    左： 71, 右： 49
actual_list (69)
    左： 72 73 74, 右： 71 74
actual (70)
    左： 75, 右： 73 74


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       转到状态 3
    decl_list     转到状态 4
    decl          转到状态 5
    variableDecl  转到状态 6
    callDecl      转到状态 7


State 1

   13 callDecl: FUNC . OBJECTID '(' variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8


State 2

    6 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 9

    variable  转到状态 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: decl_list .
    3 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          转到状态 12
    variableDecl  转到状态 6
    callDecl      转到状态 7


State 5

    2 decl_list: decl .

    $default  reduce using rule 2 (decl_list)


State 6

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

   13 callDecl: FUNC OBJECTID . '(' variable_list ')' TYPEID stmtBlock

    '('  shift, and go to state 13


State 9

   12 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 14


State 10

    6 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  接受


State 12

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 13

   13 callDecl: FUNC OBJECTID '(' . variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 9

    $default  reduce using rule 9 (variable_list)

    variable_list  转到状态 16
    variable       转到状态 17


State 14

   12 variable: OBJECTID TYPEID .

    $default  reduce using rule 12 (variable)


State 15

    6 variableDecl: VAR variable ';' .

    $default  reduce using rule 6 (variableDecl)


State 16

   11 variable_list: variable_list . ',' variable
   13 callDecl: FUNC OBJECTID '(' variable_list . ')' TYPEID stmtBlock

    ','  shift, and go to state 18
    ')'  shift, and go to state 19


State 17

   10 variable_list: variable .

    $default  reduce using rule 10 (variable_list)


State 18

   11 variable_list: variable_list ',' . variable

    OBJECTID  shift, and go to state 9

    variable  转到状态 20


State 19

   13 callDecl: FUNC OBJECTID '(' variable_list ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 21


State 20

   11 variable_list: variable_list ',' variable .

    $default  reduce using rule 11 (variable_list)


State 21

   13 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  转到状态 23


State 22

   16 stmtBlock: '{' . variableDecl_list stmt_list '}'
   17          | '{' . variableDecl_list '}'
   18          | '{' . stmt_list '}'
   19          | '{' . '}'

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 38
    '('           shift, and go to state 39
    '{'           shift, and go to state 22
    '}'           shift, and go to state 40

    variableDecl       转到状态 41
    variableDecl_list  转到状态 42
    stmt_list          转到状态 43
    stmtBlock          转到状态 44
    stmt               转到状态 45
    ifStmt             转到状态 46
    whileStmt          转到状态 47
    forStmt            转到状态 48
    returnStmt         转到状态 49
    continueStmt       转到状态 50
    breakStmt          转到状态 51
    expr               转到状态 52
    call               转到状态 53


State 23

   13 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock .

    $default  reduce using rule 13 (callDecl)


State 24

   29 ifStmt: IF . expr stmtBlock ELSE stmtBlock
   30       | IF . expr stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  转到状态 54
    call  转到状态 53


State 25

   31 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  转到状态 55
    call  转到状态 53


State 26

   32 forStmt: FOR . expr ';' expr ';' expr stmtBlock
   33        | FOR . expr ';' expr ';' stmtBlock
   34        | FOR . expr ';' ';' expr stmtBlock
   35        | FOR . ';' expr ';' expr stmtBlock
   36        | FOR . ';' ';' expr stmtBlock
   37        | FOR . expr ';' ';' stmtBlock
   38        | FOR . ';' expr ';' stmtBlock
   39        | FOR . ';' ';' stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 56
    '('           shift, and go to state 39

    expr  转到状态 57
    call  转到状态 53


State 27

   43 breakStmt: BREAK . ';'

    ';'  shift, and go to state 58


State 28

   42 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 59


State 29

   40 returnStmt: RETURN . expr ';'
   41           | RETURN . ';'

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 60
    '('           shift, and go to state 39

    expr  转到状态 61
    call  转到状态 53


State 30

   45 expr: CONST_BOOL .

    $default  reduce using rule 45 (expr)


State 31

   47 expr: CONST_INT .

    $default  reduce using rule 47 (expr)


State 32

   48 expr: CONST_STRING .

    $default  reduce using rule 48 (expr)


State 33

   46 expr: CONST_FLOAT .

    $default  reduce using rule 46 (expr)


State 34

   44 expr: OBJECTID . '=' expr
   51     | OBJECTID .
   71 call: OBJECTID . '(' actual_list ')'

    '='  shift, and go to state 62
    '('  shift, and go to state 63

    $default  reduce using rule 51 (expr)


State 35

   57 expr: '-' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  转到状态 64
    call  转到状态 53


State 36

   67 expr: '!' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  转到状态 65
    call  转到状态 53


State 37

   68 expr: '~' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  转到状态 66
    call  转到状态 53


State 38

   20 stmt: ';' .

    $default  reduce using rule 20 (stmt)


State 39

   50 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  转到状态 67
    call  转到状态 53


State 40

   19 stmtBlock: '{' '}' .

    $default  reduce using rule 19 (stmtBlock)


State 41

    7 variableDecl_list: variableDecl .

    $default  reduce using rule 7 (variableDecl_list)


State 42

    8 variableDecl_list: variableDecl_list . variableDecl
   16 stmtBlock: '{' variableDecl_list . stmt_list '}'
   17          | '{' variableDecl_list . '}'

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 38
    '('           shift, and go to state 39
    '{'           shift, and go to state 22
    '}'           shift, and go to state 68

    variableDecl  转到状态 69
    stmt_list     转到状态 70
    stmtBlock     转到状态 44
    stmt          转到状态 45
    ifStmt        转到状态 46
    whileStmt     转到状态 47
    forStmt       转到状态 48
    returnStmt    转到状态 49
    continueStmt  转到状态 50
    breakStmt     转到状态 51
    expr          转到状态 52
    call          转到状态 53


State 43

   15 stmt_list: stmt_list . stmt
   18 stmtBlock: '{' stmt_list . '}'

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 38
    '('           shift, and go to state 39
    '{'           shift, and go to state 22
    '}'           shift, and go to state 71

    stmtBlock     转到状态 44
    stmt          转到状态 72
    ifStmt        转到状态 46
    whileStmt     转到状态 47
    forStmt       转到状态 48
    returnStmt    转到状态 49
    continueStmt  转到状态 50
    breakStmt     转到状态 51
    expr          转到状态 52
    call          转到状态 53


State 44

   28 stmt: stmtBlock .

    $default  reduce using rule 28 (stmt)


State 45

   14 stmt_list: stmt .

    $default  reduce using rule 14 (stmt_list)


State 46

   22 stmt: ifStmt .

    $default  reduce using rule 22 (stmt)


State 47

   23 stmt: whileStmt .

    $default  reduce using rule 23 (stmt)


State 48

   24 stmt: forStmt .

    $default  reduce using rule 24 (stmt)


State 49

   27 stmt: returnStmt .

    $default  reduce using rule 27 (stmt)


State 50

   26 stmt: continueStmt .

    $default  reduce using rule 26 (stmt)


State 51

   25 stmt: breakStmt .

    $default  reduce using rule 25 (stmt)


State 52

   21 stmt: expr . ';'
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 73
    OR     shift, and go to state 74
    EQUAL  shift, and go to state 75
    NE     shift, and go to state 76
    GE     shift, and go to state 77
    LE     shift, and go to state 78
    '<'    shift, and go to state 79
    '>'    shift, and go to state 80
    '+'    shift, and go to state 81
    '-'    shift, and go to state 82
    '*'    shift, and go to state 83
    '/'    shift, and go to state 84
    '%'    shift, and go to state 85
    '&'    shift, and go to state 86
    '|'    shift, and go to state 87
    '^'    shift, and go to state 88
    ';'    shift, and go to state 89


State 53

   49 expr: call .

    $default  reduce using rule 49 (expr)


State 54

   29 ifStmt: IF expr . stmtBlock ELSE stmtBlock
   30       | IF expr . stmtBlock
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 73
    OR     shift, and go to state 74
    EQUAL  shift, and go to state 75
    NE     shift, and go to state 76
    GE     shift, and go to state 77
    LE     shift, and go to state 78
    '<'    shift, and go to state 79
    '>'    shift, and go to state 80
    '+'    shift, and go to state 81
    '-'    shift, and go to state 82
    '*'    shift, and go to state 83
    '/'    shift, and go to state 84
    '%'    shift, and go to state 85
    '&'    shift, and go to state 86
    '|'    shift, and go to state 87
    '^'    shift, and go to state 88
    '{'    shift, and go to state 22

    stmtBlock  转到状态 90


State 55

   31 whileStmt: WHILE expr . stmtBlock
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 73
    OR     shift, and go to state 74
    EQUAL  shift, and go to state 75
    NE     shift, and go to state 76
    GE     shift, and go to state 77
    LE     shift, and go to state 78
    '<'    shift, and go to state 79
    '>'    shift, and go to state 80
    '+'    shift, and go to state 81
    '-'    shift, and go to state 82
    '*'    shift, and go to state 83
    '/'    shift, and go to state 84
    '%'    shift, and go to state 85
    '&'    shift, and go to state 86
    '|'    shift, and go to state 87
    '^'    shift, and go to state 88
    '{'    shift, and go to state 22

    stmtBlock  转到状态 91


State 56

   35 forStmt: FOR ';' . expr ';' expr stmtBlock
   36        | FOR ';' . ';' expr stmtBlock
   38        | FOR ';' . expr ';' stmtBlock
   39        | FOR ';' . ';' stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 92
    '('           shift, and go to state 39

    expr  转到状态 93
    call  转到状态 53


State 57
